--- a/css/style.css
+++ b/css/style.css
@@ -3213,7 +3213,7 @@ header {
   .section-toggle {
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
+    align-items: center;
     gap: 1.2rem;
     width: 100%;
     background: none;
