--- a/css/style.css
+++ b/css/style.css
@@ -3256,6 +3256,7 @@ header {
     border-bottom: 1px solid #eee;
     padding-bottom: 0.25rem;
     text-align: left;
+    font-size: 1rem;
   }
 
   .accordion-section ul {
