--- a/css/proposal.css
+++ b/css/proposal.css
@@ -385,3 +385,35 @@
     padding-inline: 1.2rem;
   }
 }
+
+/* Proposal form status message */
+
+.proposal-status {
+  margin-top: 0.5rem;
+}
+
+.proposal-status__message {
+  font-size: 0.88rem;
+  padding: 0.55rem 0.8rem;
+  border-radius: 0.5rem;
+  border: 1px solid transparent;
+}
+
+.proposal-status__message.is-success {
+  background-color: #ecfdf3;
+  border-color: #16a34a33;
+  color: #166534;
+}
+
+.proposal-status__message.is-error {
+  background-color: #fef2f2;
+  border-color: #dc262633;
+  color: #b91c1c;
+}
+
+.proposal-status__message.is-info {
+  background-color: #eff6ff;
+  border-color: #2563eb33;
+  color: #1d4ed8;
+}
+
