--- a/css/style.css
+++ b/css/style.css
@@ -3701,3 +3701,17 @@ header {
     grid-template-columns: 1fr;
   }
 }
+
+.legal-section {
+  padding: 1rem 4rem;
+}
+.legal-section h2 {
+  font-size: 1.5rem;
+}
+.legal-section h3 {
+  font-size: 1.2rem;
+  margin-block-start: 1rem;
+}
+.legal-section ul li {
+  list-style-type: disc;
+}
